--- a/index.html
+++ b/index.html
@@ -5,9 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./index.js" type="module"></script>
+    <link rel="stylesheet" href="css/main.css" />
+    <script src="./index.js" type="module" defer></script>
   </head>
   <body>
-    <h2>Arrays and stuff</h2>
+    <div class="container">
+      <nav class="nav">
+        <li><a href="#"></a>home</li>
+        <li><a href="#"></a>about</li>
+        <li><a href="#"></a>info</li>
+      </nav>
+      <header class="header">
+        <h2>Arrays and stuff</h2>
+        <div class="one">one</div>
+        <div class="two">two</div>
+        <div class="three">three</div>
+        <div class="four">four</div>
+      </header>
+      <aside class="aside">
+        <div class="info">
+          <h3>some info</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+            pariatur ipsum possimus dolor. Voluptatibus, quidem.
+          </p>
+        </div>
+      </aside>
+      <footer class="footer">
+        <p>&copy; Darren Inc</p>
+      </footer>
+    </div>
   </body>
 </html>
