--- a/index.html
+++ b/index.html
@@ -17,15 +17,45 @@
       </nav>
       <header class="header">
         <h2>Arrays and stuff</h2>
-        <div class="one">one</div>
-        <div class="two">two</div>
-        <div class="three">three</div>
-        <div class="four">four</div>
+        <div class="content">
+          <div class="one stuff">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut
+              magnam nulla tenetur.
+            </p>
+          </div>
+          <div class="two stuff">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum perspiciatis commodi mollitia sint nesciunt?
+            </p>
+          </div>
+          <div class="three stuff">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+              cum quae a?
+            </p>
+          </div>
+          <div class="four stuff">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+              illo quisquam quae doloribus aperiam?
+            </p>
+          </div>
+        </div>
       </header>
       <aside class="aside">
         <div class="info">
           <h3>some info</h3>
-          <p>
+          <p class="asidep">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+            pariatur ipsum possimus dolor. Voluptatibus, quidem.
+          </p>
+          <p class="asidep">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+            pariatur ipsum possimus dolor. Voluptatibus, quidem.
+          </p>
+          <p class="asidep">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
             pariatur ipsum possimus dolor. Voluptatibus, quidem.
           </p>
